app-envoy/assets/envoy-envoy.yaml
node:
  id: "customer-service"
  cluster: "cluster"
static_resources:
  listeners:
  - name: listener-sds-mtls
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          idle_timeout: 1s
          forward_client_cert_details: sanitize_set
          set_current_client_cert_details:
            uri: true
          codec_type: auto
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/tmp/envoy-access.log"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: customer_service
          http_filters:
          - name: envoy.router
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: "spiffe://example.local/customer-service"
            sds_config:
              api_config_source:
                api_type: GRPC
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
          combined_validation_context:
            # validate the SPIFFE ID of incoming clients
            default_validation_context:
              verify_subject_alt_name:
                - "spiffe://example.local/webapp"
            # obtain the trust bundle from SDS
            validation_context_sds_secret_config:
              name: "spiffe://example.local"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
          tls_params:
            ecdh_curves:
              - X25519:P-256:P-521:P-384
  clusters:
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    hosts:
      - pipe:
          path: /run/spire/sockets/agent.sock
  - name: customer_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: customer-service
        port_value: 80
